--- a/some_models_v1.ipynb
+++ b/some_models_v1.ipynb
@@ -6,7 +6,7 @@
       "name": "some_models_v1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOomuQcXuIR/ka9dKF1p0I",
+      "authorship_tag": "ABX9TyPoQWzQ8sDq3xHZ1PJr2LKG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,9 @@
         "https://www.kaggle.com/dmitri9149/tweet-sentiment-extraction-word-counts-only  \n",
         "\n",
         "https://www.kaggle.com/dmitri9149/tweet-sentiment-roberta-and-pytorch  \n",
+        "\n",
+        "### Machine Translation, Transformers  \n",
+        "https://github.com/Dmitri9149/Transformer_From_Scratch\n",
         "\n",
         "\n",
         "\n",
